# rules_gqlgen

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: build.yml
docs/: BUILD.bazel  release.md
example/: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go  schema.graphqls
gqlgen/: BUILD.bazel  def.bzl  generate.sh  gqlgen.md
gqlgen/modcacher/: BUILD.bazel  main.go
