load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@com_siliconally_rules_gqlgen//gqlgen:def.bzl", "gqlgen")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Silicon-Ally/rules_gqlgen/example
# gazelle:resolve go github.com/Silicon-Ally/rules_gqlgen/example/generated //gql_generated
# gazelle:resolve go github.com/Silicon-Ally/rules_gqlgen/example/model //gql_model
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

gqlgen(
    name = "gql",
    base_importpath = "github.com/Silicon-Ally/rules_gqlgen/example",
    schemas = ["//:schema.graphqls"],
    visibility = ["//visibility:public"],
    gomod = "//:go.mod",
    gosum = "//:go.sum",
)

go_library(
    name = "example_lib",
    srcs = ["main.go"],
    importpath = "github.com/Silicon-Ally/rules_gqlgen/example",
    visibility = ["//visibility:private"],
    deps = [
        "//:gql_generated",
        "//:gql_model",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/playground",
    ],
)

go_binary(
    name = "example",
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)

exports_files([
    "go.mod",
    "go.sum",
])

exports_files(["schema.graphqls"])

