load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@io_bazel_rules_go//go:def.bzl", "go_path")

sh_binary(
    name = "generate",
    srcs = ["generate.sh"],
    visibility = ["//visibility:public"],
)

go_path(
    name = "gqlgen_path",
    include_data = True,
    include_pkg = False,
    mode = "archive",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_99designs_gqlgen//:gqlgen",
    ],
)

stardoc(
    name = "gqlgen_docs",
    out = "gqlgen.md",
    input = "def.bzl",
    deps = [
        "@io_bazel_rules_go//extras:gomock",
        "@io_bazel_rules_go//go:def",
    ],
)
