load("@io_bazel_rules_go//go:def.bzl", "go_path")

sh_binary(
    name = "generate",
    srcs = ["generate.sh"],
    visibility = ["//visibility:public"],
)

go_path(
    name = "gqlgen_path",
    include_data = True,
    include_pkg = False,
    mode = "archive",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_99designs_gqlgen//:gqlgen",
    ],
)

exports_files(["def.bzl"])
